--- a/panda-netty-client/pom.xml
+++ b/panda-netty-client/pom.xml
@@ -8,9 +8,13 @@
 		<artifactId>panda-netty</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
+	<packaging>jar</packaging>
 	<artifactId>panda-netty-client</artifactId>
 	<name>${project.artifactId}}</name>
-	
+
+	<properties>
+		<maven.shade.plugin.version>2.0</maven.shade.plugin.version>
+	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>com.clj</groupId>
@@ -18,4 +22,30 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>${maven.shade.plugin.version}</version>
+				<configuration>
+					<transformers>
+						<transformer
+							implementation="org.apache.maven.plugins.shade.resource.MainifestResourceTransformer">
+							<mainClass>com.panda.netty.client.Client</mainClass>
+						</transformer>
+					</transformers>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
