--- a/panda-netty-client/pom.xml
+++ b/panda-netty-client/pom.xml
@@ -10,10 +10,10 @@
 	</parent>
 	<packaging>jar</packaging>
 	<artifactId>panda-netty-client</artifactId>
-	<name>${project.artifactId}}</name>
+	<name>${project.artifactId}</name>
 
 	<properties>
-		<maven.shade.plugin.version>2.0</maven.shade.plugin.version>
+		<maven.shade.plugin.version>2.4.3</maven.shade.plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
