--- a/panda-netty-common/pom.xml
+++ b/panda-netty-common/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<packaging>jar</packaging>
 	<artifactId>panda-netty-common</artifactId>
-	<name>${project.artifactId}}</name>
+	<name>${project.artifactId}</name>
 
 	<properties>
 		<junit.version>4.11</junit.version>
@@ -175,21 +175,4 @@
 		</dependency>
 	</dependencies>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>${maven.shade.plugin.version}</version>
-				<executions>
-					<execution>
-						<phase>package</phase>
-						<goals>
-							<goal>shade</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-	</build>
 </project>
