--- a/panda-netty-server/pom.xml
+++ b/panda-netty-server/pom.xml
@@ -9,7 +9,7 @@
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>panda-netty-server</artifactId>
-	<name>${project.artifactId}}</name>
+	<name>${project.artifactId}</name>
 
 	<dependencies>
 		<dependency>
