--- a/panda-netty-client/pom.xml
+++ b/panda-netty-client/pom.xml
@@ -23,25 +23,36 @@
 		</dependency>
 	</dependencies>
 
+	<!-- <build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+		<artifactId>maven-shade-plugin</artifactId> <version>${maven.shade.plugin.version}</version> 
+		<configuration> <transformers> <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> 
+		<mainClass>com.panda.netty.client.Client</mainClass> </transformer> </transformers> 
+		</configuration> <executions> <execution> <phase>package</phase> <goals> 
+		<goal>shade</goal> </goals> </execution> </executions> </plugin> </plugins> 
+		</build> -->
+
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-shade-plugin</artifactId>
-				<version>${maven.shade.plugin.version}</version>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.6</version>
 				<configuration>
-					<transformers>
-						<transformer
-							implementation="org.apache.maven.plugins.shade.resource.MainifestResourceTransformer">
+					<archive>
+						<manifest>
 							<mainClass>com.panda.netty.client.Client</mainClass>
-						</transformer>
-					</transformers>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
 				</configuration>
 				<executions>
 					<execution>
+						<id>make-assembly</id>
 						<phase>package</phase>
 						<goals>
-							<goal>shade</goal>
+							<goal>single</goal>
 						</goals>
 					</execution>
 				</executions>
