--- a/panda-netty-server/pom.xml
+++ b/panda-netty-server/pom.xml
@@ -11,6 +11,10 @@
 	<artifactId>panda-netty-server</artifactId>
 	<name>${project.artifactId}</name>
 
+	<properties>
+		<maven.shade.plugin.version>2.4.3</maven.shade.plugin.version>
+	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.clj</groupId>
@@ -18,4 +22,41 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+
+	<!-- <build> <plugins> <plugin> <groupId>org.apache.maven.plugins</groupId> 
+		<artifactId>maven-shade-plugin</artifactId> <version>${maven.shade.plugin.version}</version> 
+		<configuration> <transformers> <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> 
+		<manifestEntries> <mainClass>com.panda.netty.server.Server</mainClass> </manifestEntries> 
+		</transformer> </transformers> </configuration> <executions> <execution> 
+		<phase>package</phase> <goals> <goal>shade</goal> </goals> </execution> </executions> 
+		</plugin> </plugins> </build> -->
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.panda.netty.server.Server</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
